// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectedRoute component navigates to the auth route when logged out 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`ProtectedRoute component navigates to the auth route when logged out 2`] = `
Array [
  Array [
    "AuthFoo",
  ],
]
`;

exports[`ProtectedRoute component navigates to the logged in route when logged in 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</View>
`;

exports[`ProtectedRoute component navigates to the logged in route when logged in 2`] = `
Array [
  Array [
    "Home",
  ],
]
`;

exports[`ProtectedRoute component renders a custom loading component 1`] = `<View />`;

exports[`ProtectedRoute component renders a custom loading component 2`] = `Array []`;
